<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/navigation_bar"
        layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navigation_bar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_user_search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin_double_half_fourth"
            android:text="@string/transfer_user_search"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20" />

        <FrameLayout
            android:id="@+id/fl_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_below="@+id/tv_user_search_title">

            <AutoCompleteTextView
                android:id="@+id/atv_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transfer_user_search"
                android:layout_gravity="start|center_vertical"
                android:lines="1"
                android:paddingEnd="36dp"
                android:paddingRight="36dp"
                android:singleLine="true"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/clear_text_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="end|center_vertical"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/clear_text"
                android:padding="6dp"
                android:src="@drawable/ic_close_black" />
        </FrameLayout>


        <TextView
            android:id="@+id/tv_transfer_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin_double_half_fourth"
            android:text="@string/transfer_amount_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20" />

        <EditText
            android:id="@+id/et_amount"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin_double"
            android:layout_marginRight="@dimen/activity_margin_double"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transfer_amount"
            android:enabled="false"
            android:textSize="@dimen/text_size_30"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"/>

        <TextView
            android:id="@+id/tv_amount_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_half"
            android:layout_marginLeft="@dimen/activity_margin_double"
            android:layout_marginRight="@dimen/activity_margin_double"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/transfer_limit"
            android:visibility="gone"/>

        <com.j7arsen.pw.utils.view.EnableButton
            android:id="@+id/btn_transfer"
            style="@style/CustomRoundedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_double"
            android:text="@string/user_transfer"
            app:disableDrawable="@drawable/shape_rounded_disabled_button"
            app:enable="false"
            app:enableDrawable="@drawable/selector_button"/>


    </LinearLayout>

</RelativeLayout>
